--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="h1"></h1>
+    <h1 id="h1" onresize="size()">DSFFSF</h1>
     <label for="input">Enter the Number</label>
     <input type="text" name="Input" id="Px1">
     <button type="submit" onclick="input()">Submit</button>
