Added Some Basic Structure

--- a/index.html
+++ b/index.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta
+    <meta>
     <title>Document</title>
 </head>
 <body>
+    <div class="top-head">
+        <h1>Px to Vw and Vh converter</h1>
+        <div class="Media-Queries">
+             
+        </div>
+    </div>
+     <div class="outerlayer">
+      <div class="converter">
+           <div class="form">
+               <form action="">
+                   <p>Know your Current Screen Size</p>
+                   <p id="knowScreenWidth" onclick="Display();">width: <span iid="knowscreenHeight">Height: </span></p>
+                <label for="SelectDevice">Select Your Device</label>
+                <select name="SelectDevice" id="Select">
+                    <option value="Custom">Custom</option>
+                    <option value="Iphone">Iphone</option>
+                    <option value="Android">Android</option>
+                    <option value="Tablet">Tablet</option>
+                </select>
+                <button type="submit" onclick="color()">Submit</button>
+               </form>
+           </div>
+      </div>
+      <div class="screenselecter">
+
+      </div>
+     </div>
     <h1 id="h1" >DSFFSF</h1>
     <label for="input">Enter the Number</label>
     <input type="text" name="Input" id="Px1">
