--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                     <option value="Android">Android</option>
                     <option value="Tablet">Tablet</option>
                 </select>
-                <button class="DeviceButton"onclick="color()">Submit</button>
+                <button class="DeviceButton" onclick="color(); Know()">Submit</button>
            </div>
       </div>
     </div>
-    <h1 id="h1" >DSFFSF</h1>
+    <h1 id="hes">DSFFSF</h1>
     <label for="input">Enter the Number</label>
     <input type="text" name="Input" id="Px1">
     <button type="submit" onclick="input()">Submit</button>
