Testing and added another input and label

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="converter">
           <div class="MainConversion">
             <label for="ScreenWidth">Screen Width</label>
-            <input type="number" name="ScreenWidth" id="ScreenWidth">
+            <input type="text" name="ScreenWidth" id="ScreenWidth">
             <label for="ScreenHeight">Screen Height</label>
             <input type="text" name="ScreenHeight" id="ScreenHeight">
             <label for="PxtoVw">Number of Vw units</label>
