--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="converter">
           <div class="MainConversion">
             <label for="ScreenWidth">Screen Width</label>
-            <input type="text" name="ScreenWidth" id="c">
+            <input type="text" name="ScreenWidth" id="ScreenWidth">
             <label for="ScreenHeight">Screen Height</label>
             <input type="text" name="ScreenHeight" id="ScreenHeight">
             <label for="PxtoVw">Number of Vw units</label>
@@ -37,7 +37,7 @@
                     <option value="Android">Android</option>
                     <option value="Tablet">Tablet</option>
                 </select>
-                <button class="DeviceButton" onclick="color(); Know()">Submit</button>
+                <button class="DeviceButton" onclick="color(); Choice()">Submit</button>
            </div>
       </div>
     </div>
