Added a new option in select and Made if else statements for all option with their related Widths and Heights

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <option value="Iphone">Iphone</option>
                     <option value="Android">Android</option>
                     <option value="Tablet">Tablet</option>
+                <option value="Custom">Custom</option>
                 </select>
                 <button class="DeviceButton" onclick="color(); Choice()">Submit</button>
            </div>
