Making Function to calculate and return the output if the users enter wrong values

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <option value="Tablet">Tablet</option>
                 <option value="Custom">Custom</option>
                 </select>
+                <button type="submit" onclick="Colcolate()">Check</button>
                 <button class="DeviceButton" onclick="color(); Choice()">Submit</button>
            </div>
       </div>
