--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <input type="text" name="ScreenHeight" id="ScreenHeight">
             <label for="PxtoVw">Number of Vw units</label>
             <input type="text" name="PxtoVw" id="PxtoVW">
+            <p id="PxtoVwResult"></p>
             <label for="PxtoVh">Number of Vh Units</label>
+            <p id="PxtoVhResult"></p>
             <input type="text" name="PxtoVw" id="PxtoVh">
           </div>
            <div class="ScreenSelector">
