--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="main.js"></script>
     <title>Document</title>
 </head>
@@ -13,7 +16,10 @@
     <div class="top-head">
         <h1>Px to Vw and Vh converter</h1>
         <div class="Media-Queries">
-             
+             <ul>
+                 <li>Docx</li>
+                 <li><abbr title="Try Our Media Media-Queries no need of making on your own">Media-Queries</abbr></li>
+             </ul>
         </div>
     </div>
      <div class="outerlayer">
