Added a new div and p for the display if there is any mistake

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
      <div class="outerlayer">
       <div class="converter">
           <div class="MainConversion">
+            <div id="displayresult"><p></p></div>  
             <label for="ScreenWidth">Screen Width</label>
             <input type="text" name="ScreenWidth" id="ScreenWidth">
             <label for="ScreenHeight">Screen Height</label>
