--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      <div class="outerlayer">
       <div class="converter">
           <div class="MainConversion">
-            <div id="displayresult"><h5 id="HeaderDisplay"></h5><p id="MistakeDisplay"></p></div>  
+            <div id="displayresult"><h5 id="HeaderDisplay">Enter the Value</h5><p id="MistakeDisplay">Mistakes get display here</p></div>  
             <label for="ScreenWidth">Screen Width</label>
             <input type="text" name="ScreenWidth" id="ScreenWidth">
             <label for="ScreenHeight">Screen Height</label>
