Differenciated the Know the screen size and Select Screen Size

--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@
           </div>
         </div>
            <div class="ScreenSelector">
+               <div id="knowScreensize">
                    <p>Know your Current Screen Size</p>
                    <p id="knowScreenWidth" class="Width">width: <span iid="knowscreenHeight">Height: </span></p>
-                <label for="SelectDevice">Select Your Device</label>
+                    <button>Check</button>
+                </div>
+                <div id="ScreenSelection">
+                   <label for="SelectDevice">Select Your Device</label>
                 <select name="SelectDevice" id="select">
                     <option value="Iphone">Iphone</option>
                     <option value="Android">Android</option>
@@ -50,6 +54,7 @@
                 </select>
                 <button type="submit" onclick="Colcolate()">Check</button>
                 <button class="DeviceButton" onclick="color(); Choice()">Submit</button>
+           </div>
            </div>
     </div>
     <h1 id="hes">DSFFSF</h1>
