changed the name from Submit > Check

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <label for="PxtoVh">Number of Vh Units</label>
             <p id="PxtoVhResult"></p>
             <input type="text" name="PxtoVw" id="PxtoVh">
-            <button class="DeviceButton" onclick="color(); Choice()">Submit</button>
+            <button class="DeviceButton" onclick="color(); Choice()">Check</button>
 
           </div>
         </div>
