Changeed the function location and added to the another Check

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <label for="PxtoVh">Number of Vh Units</label>
             <p id="PxtoVhResult"></p>
             <input type="text" name="PxtoVw" id="PxtoVh">
-            <button class="DeviceButton" onclick="color(); Choice()">Check</button>
+            <button class="DeviceButton" onclick="Choice(); Colcolate()">Check</button>
 
           </div>
         </div>
@@ -54,7 +54,7 @@
                     <option value="Tablet">Tablet</option>
                 <option value="Custom">Custom</option>
                 </select>
-                <button type="submit" onclick="Colcolate()">Check</button>
+                <button type="submit" onclick="">Check</button>
            </div>
            </div>
     </div>
