Changeed the location of your device option

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 <div id="ScreenSelection">
                    <label for="SelectDevice">Select Your Device</label>
                 <select name="SelectDevice" id="select">
+                    <option value="Yourdevice">Your Device</option>
                     <option value="Iphone">Iphone</option>
                     <option value="Android">Android</option>
                     <option value="Tablet">Tablet</option>
-                <option value="Custom">Custom</option>
                 </select>
                 <button type="submit" onclick="">Check</button>
            </div>
