Replace the Choice() from the option select to check button

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                 </div>
                 <div id="ScreenSelection">
                    <label for="SelectDevice">Select Your Device</label>
-                <select name="SelectDevice" onselect="Choice()" id="select">
-                    <option value="Custom" onclick="Choice()">Custom</option>
-                    <option value="Yourdevice" onclick="Choice()">Your Device</option>
-                    <option value="Iphone" onclick="Choice()">Iphone</option>
-                    <option value="Android" onclick="Choice()">Android</option>
-                    <option value="Tablet" onclick="Choice()">Tablet</option>
+                <select name="SelectDevice" onselect="" id="select">
+                    <option value="Custom" >Custom</option>
+                    <option value="Yourdevice" >Your Device</option>
+                    <option value="Iphone" >Iphone</option>
+                    <option value="Android" >Android</option>
+                    <option value="Tablet" >Tablet</option>
                 </select>
-                <button type="submit" onclick="">Check</button>
+                <button type="submit" onclick="Choice()">Check</button>
            </div>
            </div>
     </div>
