Disabled attribute set turn off when the custom is clicked

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
             <div id="displayresult"><h5 id="HeaderDisplay">Enter the Value</h5><p id="MistakeDisplay">Mistakes get display here</p></div>  
             <label for="ScreenWidth">Screen Width</label>
             <input type="text" name="ScreenWidth" id="ScreenWidth">
+            <p id="Screenwidthinfo"></p>
             <label for="ScreenHeight">Screen Height</label>
             <input type="text" name="ScreenHeight" id="ScreenHeight">
+            <p id="Screenheightinfo"></p>
             <label for="PxtoVw">Number of Vw units</label>
             <input type="text" name="PxtoVw" id="PxtoVW">
             <p id="PxtoVwResult"></p>
