--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div id="ScreenSelection">
                    <label for="SelectDevice">Select Your Device</label>
-                <select name="SelectDevice" onselect="" id="select">
+                <select name="SelectDevice" onclick="color1()" id="select">
                     <option value="Custom" >Custom</option>
                     <option value="Yourdevice" >Your Device</option>
                     <option value="Iphone" >Iphone</option>
