Added a vw value to the header and deleted the debris

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 </div>
                 <div id="ScreenSelection">
-                   <label for="SelectDevice">Select Your Device</label>
+                   <label for="SelectDevice">Select the Device</label>
                 <select name="SelectDevice" onclick="color1()" id="select">
                     <option value="Custom" >Custom</option>
                     <option value="Yourdevice" >Your Device</option>
