changed the colcolate to calculate in both js and html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, maximum-scale=1.0" >
     <meta>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,7 +41,7 @@
             <label for="PxtoVh" >Number of Vh Units</label>
             <p id="PxtoVhResult"></p>
             <input type="text" name="PxtoVw" id="PxtoVh">
-            <button class="DeviceButton" onclick="Colcolate(); Clearinfo()">Check</button>
+            <button class="DeviceButton" onclick="Calculate(); Clearinfo()">Check</button>
             <button class="DeviceButton" onclick="Clear()">Clear</button>
           </div>
         </div>
