Removed the P's which were used to display mistakes, removed the clearinfo() which use to clear the mistakes, and set the default placeholders for both screenwidth and screenHeight

--- a/index.html
+++ b/index.html
@@ -30,17 +30,15 @@
                 <p id="MistakeDisplay">Enter a width and height you want to convert for 🔮</p>
             </div>  
             <label for="ScreenWidth">Screen Width</label>
-            <input type="text" name="ScreenWidth" id="ScreenWidth">
-            <p id="Screenwidthinfo">Enter the Width</p>
+            <input type="text" name="ScreenWidth" id="ScreenWidth" placeholder="Enter the Width">
             <label for="ScreenHeight">Screen Height</label>
-            <input type="text" name="ScreenHeight" id="ScreenHeight">
-            <p id="Screenheightinfo">Enter the Height</p>
+            <input type="text" name="ScreenHeight" id="ScreenHeight" placeholder="Enter the height">
             <label for="PxtoVw" >Number of Vw units</label>
-            <input type="text" name="PxtoVw" id="PxtoVW">
+            <input type="text" name="PxtoVw" id="PxtoVW" placeholder="Enter the Value">
             <p id="PxtoVwResult"></p>
             <label for="PxtoVh" >Number of Vh Units</label>
             <p id="PxtoVhResult"></p>
-            <input type="text" name="PxtoVw" id="PxtoVh">
+            <input type="text" name="PxtoVh" id="PxtoVh" placeholder="Enter the Value">
             <button class="DeviceButton" onclick="Calculate(); Clearinfo()">Check</button>
             <button class="DeviceButton" onclick="Clear()">Clear</button>
           </div>
