Changed the position of the p tag which displays the errors

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <input type="text" name="PxtoVw" id="PxtoVW" placeholder="Enter the Value">
             <p id="PxtoVwResult"></p>
             <label for="PxtoVh" >Number of Vh Units</label>
-            <p id="PxtoVhResult"></p>
             <input type="text" name="PxtoVh" id="PxtoVh" placeholder="Enter the Value">
-            <button class="DeviceButton" onclick="Calculate(); Clearinfo()">Check</button>
+            <p id="PxtoVhResult"></p>
+            <button class="DeviceButton" onclick="Calculate()">Check</button>
             <button class="DeviceButton" onclick="Clear()">Clear</button>
           </div>
         </div>
