Added a new button to check the height

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                    <p id="knowScreenWidth" class="Width">width: </p>
                    <p id="knowscreenHeight">Height: </p>
                 </div>
+                <button class="ScreenSizeCheckingbutton">Check</button>
                 </div>
                 <div id="ScreenSelection">
                    <label for="SelectDevice">Select the Device</label>
