Added the onclick event listner and mention the function which calculates the width and hheight of the screen

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                <div id="knowScreensize">
                    <h5>Know your Current Screen Size</h5>
                    <div class="ScreenSizeChecker">
-                   <p id="knowScreenWidth" class="Width">width: </p>
+                   <p id="knowScreenWidth" class="Width" >width: </p>
                    <p id="knowscreenHeight">Height: </p>
                 </div>
-                <button class="ScreenSizeCheckingbutton">Check</button>
+                <button class="ScreenSizeCheckingbutton" onclick="checksize()">Check</button>
                 </div>
                 <div id="ScreenSelection">
                    <label for="SelectDevice">Select the Device</label>
