Added the select and check button at the top of the responsive screen disabled when full screen

--- a/index.html
+++ b/index.html
@@ -22,9 +22,20 @@
              </ul>
         </div>
     </div>
-     <div class="outerlayer">
+    <div class="topselectionsection">
+    <select name="SelectDevice" onclick="color1()" id="select" class="Topselect">
+        <option value="Custom" >Custom</option>
+        <option value="Yourdevice" >Your Device</option>
+        <option value="Iphone" >Iphone</option>
+        <option value="Android" >Android</option>
+        <option value="Tablet" >Tablet</option>
+    </select>
+    <button type="submit" onclick="Choice()" class="Topchoice">Check</button>
+    </div> 
+    <div class="outerlayer">
       <div class="converter">
           <div class="MainConversion">
+
             <div id="displayresult">
                 <h5 id="HeaderDisplay">Enter the Value</h5>
                 <p id="MistakeDisplay">Enter a width and height you want to convert for 🔮</p>
