--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <option value="Android" >Android</option>
         <option value="Tablet" >Tablet</option>
     </select>
-    <button type="submit" onclick="Choice()" class="Topchoice">Check</button>
+    <button type="submit" onclick="Choice()" class="Topchoice">GO</button>
     </div> 
     <div class="outerlayer">
       <div class="converter">
