--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             </div> 
             <div class="Pxconversion">
             <label for="ScreenWidth">Screen Width</label>
-            <input type="text" class="Maininput" name="ScreenWidth" id="ScreenWidth" placeholder="Enter the Width">
+            <input type="text" class="Maininput" name="ScreenWidth" maxlenght="10" id="ScreenWidth" placeholder="Enter the Width">
             <label for="ScreenHeight">Screen Height</label>
-            <input type="text" class="Maininput" name="ScreenHeight" id="ScreenHeight" placeholder="Enter the height">
+            <input type="text" class="Maininput" name="ScreenHeight" maxlenght="10" id="ScreenHeight" placeholder="Enter the height">
             <label for="PxtoVw" >Number of Vw units</label>
-            <input type="text" name="PxtoVw" id="PxtoVW" placeholder="Enter the Value">
+            <input type="text" name="PxtoVw" id="PxtoVW" minlenght="10" placeholder="Enter the Value">
             <code id="PxtoVwResult"></code>
             <label for="PxtoVh" >Number of Vh Units</label>
-            <input type="text" name="PxtoVh" id="PxtoVh" placeholder="Enter the Value">
+            <input type="text" name="PxtoVh" id="PxtoVh" max-lenght="10" placeholder="Enter the Value">
             <code id="PxtoVhResult"></code>
             <button class="DeviceButton" onclick="Calculate()">Check</button>
             <button class="DeviceButton" onclick="Clear()">Clear</button>
