Added a header above the select at the top in responsive styling

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
              </ul>
         </div>
     </div>
+    <h2 class="DeviceSelectionHeader">Select the Device Size</h2>
     <div class="topselectionsection">
     <select name="SelectDevice" onclick="color1()" id="select" class="Topselect">
         <option value="Custom" >Custom</option>
