--- a/index.html
+++ b/index.html
@@ -58,14 +58,6 @@
         </div>
         </div>
            <div class="ScreenSelector">
-               <div id="knowScreensize">
-                   <h5>Know your Current Screen Size</h5>
-                   <div class="ScreenSizeChecker">
-                   <p id="knowScreenWidth" class="Width" >width: </p>
-                   <p id="knowscreenHeight">Height: </p>
-                </div>
-                <button class="ScreenSizeCheckingbutton" onclick="checksize()">Check</button>
-                </div>
                 <div id="ScreenSelection">
                    <label for="SelectDevice">Select the Device</label>
                 <select name="SelectDevice" onclick="color1()" id="select">
@@ -77,6 +69,14 @@
                 </select>
                 <button type="submit" onclick="Choice()">Check</button>
            </div>
+           <div id="knowScreensize">
+            <h5>Know your Current Screen Size</h5>
+            <div class="ScreenSizeChecker">
+            <p id="knowScreenWidth" class="Width" >Width: </p>
+            <p id="knowscreenHeight">Height: </p>
+         </div>
+         <button class="ScreenSizeCheckingbutton" onclick="checksize()">Check</button>
+         </div>
            </div>
     </div>
   </body>
