Tried justify content with different attributes

--- a/index.html
+++ b/index.html
@@ -79,5 +79,11 @@
          </div>
            </div>
     </div>
+    <div class="mainflex">
+        <div class="miniflex"></div>
+        <div class="miniflex"></div>
+        <div class="miniflex"></div>
+        <div class="miniflex"></div>
+    </div>
   </body>
   </html>
