Added the Choicetwice() to responsive select menu and released the comments

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 </div>
     <div class="landingpage">
-    <h2 class="DeviceSelectionHeader">Select the Device Size</h2>
+  <h2 class="DeviceSelectionHeader">Select the Device Size</h2>
     <div class="topselectionsection">
     <select name="SelectDevice" id="select" class="Topselect">
         <option value="Custom" >Custom</option>
@@ -34,8 +34,8 @@
         <option value="Android" >Android</option>
         <option value="Tablet" >Tablet</option>
     </select>
-    <button type="submit" onclick="Choice()" class="Topchoice">GO</button>
-    </div> 
+    <button type="submit" onclick="Choicetwice()" class="Topchoice">GO</button>
+    </div>
     <div class="outerlayer">
       <div class="converter">
           <div class="MainConversion">
