If added in event listner that is clearing the value of the existing value

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <option value="Android" >Android</option>
         <option value="Tablet" >Tablet</option>
     </select>
-    <button type="submit" onclick="Choicetwice()" class="Topchoice">GO</button>
+    <button type="submit" onclick="Choicetwice();" class="Topchoice">GO</button>
     </div>
     <div class="outerlayer">
       <div class="converter">
