Changed the function of ChoiceOnce to Choicetwice and viseversa

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <option value="Android" >Android</option>
         <option value="Tablet" >Tablet</option>
     </select>
-    <button type="submit" onclick="ChoiceOnce()" class="Topchoice">GO</button>
+    <button type="submit" onclick="Choicetwice()" class="Topchoice">GO</button>
     </div>
     <div class="outerlayer">
       <div class="converter">
@@ -79,7 +79,7 @@
                  <option value="Android" >Android</option>
                  <option value="Tablet" >Tablet</option>
              </select>
-             <button type="submit" onclick="Choicetwice()">Check</button>
+             <button type="submit" onclick="ChoiceOnce()">Check</button>
         </div>
             <div id="knowScreensize">
                 <h5>Know your Current Screen Size</h5>
